--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
-
-
-
-
-
-
-
+ 
+<head>
+  <link rel = "stylesheet" href = "style.css">
+  <link rel = "icon" href = "https://images.theconversation.com/files/350865/original/file-20200803-24-50u91u.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=1200.0&fit=crop">
+  <title> TAB TITLE </title>
+ </head>
+  <body>
+    <par>
+      <center>     
+        <li><a href = "index.html"> Home <a/a></li>
+        <li><a href = "https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> Westview Home Page <a/a></li>
+        <li><a href = "apps.html"> My Apps <a/a></li>
+    </par>
+      <br>
+          <h1> Andrew's Website </h1>
+    <center>
+  <body>    
 </html>
